@@ -111,6 +111,7 @@ where XXXXXX is the bug number as listed below.
 343335  unhandled instruction 0x1E638400 (fccmp) aarch64
 343523  OS X mach_ports_register: UNKNOWN task message [id 3403, to 
         mach_task_self(), reply 0x30f]
+343597  ppc64le: incorrect use of offseof macro
 343732  Unhandled syscall 144 (setgid) on aarch64
 343733  Unhandled syscall 187 (msgctl and related) on aarch64
 343802  s390x: Fix false positives "conditional jump or move depends on
@@ -137,12 +138,12 @@ where XXXXXX is the bug number as listed below.
 344686  Fix suppression for pthread_rwlock_init on OS X 10.10
 344702  Fix missing libobjc suppressions on OS X 10.10
 344939  Fix memcheck/tests/xml1 on OS X 10.10
+345016  helgrind/tests/locked_vs_unlocked2 is failing sometimes
 n-i-bz  Provide implementations of certain compiler builtins to support
         compilers who may not provide those
 n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
 n-i-bz  Fix compilation on distros with glibc < 2.5
 n-i-bz  (vex 3098) Avoid generation of Neon insns on non-Neon hosts
-343597  ppc64le: incorrect use of offseof macro
 
 
 Release 3.10.1 (25 November 2014)
